--- a/H1EmuLauncher/Language/StringResources.ru-RU.xaml
+++ b/H1EmuLauncher/Language/StringResources.ru-RU.xaml
@@ -84,7 +84,7 @@
     <system:String x:Key="item96">Ошибка установки патча 2016:</system:String>
     <system:String x:Key="item99">Распаковка файлов патча...</system:String>
     <system:String x:Key="item100">Удаление старых файлов...</system:String>
-    <system:String x:Key="item101">Готово. (Потраченное время:</system:String>
+    <system:String x:Key="item101">Готово. (Потраченное время: {0})</system:String>
     <system:String x:Key="item102">Файлы патча для версии 2015 установлены.</system:String>
     <system:String x:Key="item103">Файлы патча для версии 2016 установлены.</system:String>
     <system:String x:Key="item105">Установка последней версии сервера...</system:String>
@@ -132,28 +132,28 @@
     <system:String x:Key="item153">При подключении к серверам H1Emu вы должны установить Ключ Учетной Записи. Это можно сделать в меню настроек.</system:String>
     <system:String x:Key="item154">Ключ Учетной Записи...</system:String>
     <system:String x:Key="item155">Ключ Учетной Записи</system:String>
-    <system:String x:Key="item156">Чтобы играть на серверах H1Emu, вам необходимо установить Ключ Учетной Записи. Вы можете найти его в своем профиле по адресу:</system:String>
+    <system:String x:Key="item156">При подключении к серверам H1Emu необходимо задать ключ учетной записи. Вы можете сгенерировать ключ здесь, затем вам нужно будет привязать его к вашей учетной записи Discord:</system:String>
     <system:String x:Key="item157">Последняя версия сервера - это сборка для разработки, имейте в виду, что она может работать нестабильно и вызывать сбои.\n\nВы все равно хотите продолжить?</system:String>
     <system:String x:Key="item158">Добро пожаловать в H1Emu!</system:String>
     <system:String x:Key="item159">ПРЕЖДЕ ЧЕМ НАЧАТЬ, обратите внимание, что этот проект поддерживает только следующую версию игры:</system:String>
     <system:String x:Key="item160">.</system:String>
     <system:String x:Key="item161">Server IP not valid.</system:String>
-    <system:String x:Key="item162">22 декабря 2016 г</system:String>
+    <system:String x:Key="item162">22 декабря 2016</system:String>
     <system:String x:Key="item163">Пожалуйста</system:String>
     <system:String x:Key="item164">НЕ НАДО</system:String>
     <system:String x:Key="item165">используйте последнюю версию игры для Steam или любую другую версию, не упомянутую выше, так как это не сработает.</system:String>
     <system:String x:Key="item166">Спасибо и наслаждайтесь!</system:String>
     <system:String x:Key="item167">ПРОДОЛЖИТЬ</system:String>
-    <system:String x:Key="item168">Не удалось запустить сервер, попробуйте еще раз, и, если проблема не исчезнет, ​​сообщите об этом.\n\nПереустановка файлов сервера может решить эту проблему.</system:String>
+    <system:String x:Key="item168">Не удалось запустить сервер, попробуйте еще раз. Если проблема не исчезнет, сообщите об этом.\n\nПереустановка файлов сервера может решить эту проблему.</system:String>
     <system:String x:Key="item169">• Программа запуска от @Eavilaswayce •</system:String>
     <system:String x:Key="item170">Финансовые спонсоры</system:String>
     <system:String x:Key="item171">Версия игры от 22 декабря 2016 года, более актуальная и поддерживаемая проектом.</system:String>
     <system:String x:Key="item172">Версия игры от 15 января 2015 года, она не получает столько обновлений, как версия 2016 года, и в ней могут отсутствовать функции.</system:String>
     <system:String x:Key="item174">Сообщить об ошибке в файлах сервера H1Emu</system:String>
     <system:String x:Key="item175">Сообщить об ошибке в программе запуска H1Emu</system:String>
-    <system:String x:Key="item176">удаление ваших данных одиночной игры.</system:String>
+    <system:String x:Key="item176">удалить ваши данные одиночной игры.</system:String>
     <system:String x:Key="item177">Данные одиночной игры не найдены.</system:String>
-    <system:String x:Key="item178">Удаление данных одиночной игры может решить любые проблемы, с которыми вы сталкиваетесь, имейте в виду, что вы потеряете весь прогресс.\n\nХотите продолжить?</system:String>
+    <system:String x:Key="item178">Удаление данных одиночной игры может решить некоторые проблемы, с которыми вы сталкиваетесь. Имейте в виду, что вы потеряете весь прогресс.\n\nХотите продолжить?</system:String>
     <system:String x:Key="item179">Данные одиночной игры успешно удалены.</system:String>
     <system:String x:Key="item180">Используемый вами ключ учетной записи недействителен в базе данных H1Emu.\n\nУбедитесь, что вы правильно ввели ключ.</system:String>
     <system:String x:Key="item181">Ключ учетной записи, который вы используете, заблокирован.</system:String>
@@ -164,8 +164,8 @@
     <system:String x:Key="item186">При открытии установочного файла произошла ошибка:</system:String>
     <system:String x:Key="item187">Если эта ошибка повторяется, попробуйте загрузить и запустить установочный файл вручную.</system:String>
     <system:String x:Key="item188">ПОВТОРНОЕ ИСПРАВЛЕНИЕ...</system:String>
-    <system:String x:Key="item189">УБИЙСТВО</system:String>
-    <system:String x:Key="item190">Обнаружена версия игры: 23 февраля 2017 г. (King of the Kill).</system:String>
+    <system:String x:Key="item189">ОСТАНОВИТЬ</system:String>
+    <system:String x:Key="item190">Обнаружена версия игры: 23 февраля 2017 (King of the Kill).</system:String>
     <system:String x:Key="item191">Ваш H1EmuLauncher свернут в системный трей.</system:String>
     <system:String x:Key="item192">Удалить</system:String>
     <system:String x:Key="item193">Копировать</system:String>
@@ -174,12 +174,12 @@
     <system:String x:Key="item196">Ключ Учетной Записи</system:String>
     <system:String x:Key="item197">Параметры</system:String>
     <system:String x:Key="item198">Отчеты об Oшибках</system:String>
-    <system:String x:Key="item199">О</system:String>
-    <system:String x:Key="item200">Выбранный язык</system:String>
-    <system:String x:Key="item201">Отобразить карусель изображений</system:String>
+    <system:String x:Key="item199">О нас</system:String>
+    <system:String x:Key="item200">Язык</system:String>
+    <system:String x:Key="item201">Карусель изображений</system:String>
     <system:String x:Key="item202">Свернуть в системный трей</system:String>
-    <system:String x:Key="item203">На</system:String>
-    <system:String x:Key="item204">Выключенный</system:String>
+    <system:String x:Key="item203">Вкл</system:String>
+    <system:String x:Key="item204">Откл</system:String>
     <system:String x:Key="item205">ОТЧЕТ</system:String>
     <system:String x:Key="item206">Настройки</system:String>
     <system:String x:Key="item207">Добавить Cервер</system:String>
@@ -188,12 +188,12 @@
     <system:String x:Key="item210">Заставка</system:String>
     <system:String x:Key="item211">Доступно Oбновление</system:String>
     <system:String x:Key="item212">Редактировать</system:String>
-    <system:String x:Key="item213">СОХРАНЯТЬ</system:String>
+    <system:String x:Key="item213">СОХРАНИТЬ</system:String>
     <system:String x:Key="item214">ПРОВЕРКА...</system:String>
     <system:String x:Key="item215">Ошибка вычисления хеша актива:</system:String>
     <system:String x:Key="item216">Пожалуйста, удалите все файлы пользовательских ресурсов (.pack) при игре на любом главном сервере, иначе это может привести к бану.</system:String>
-    <system:String x:Key="item217">RUNNING</system:String>
-    <system:String x:Key="item218">Developer mode</system:String>
-    <system:String x:Key="item219">Enabling developer mode means that the game will not be automatically patched.</system:String>
-    <system:String x:Key="item220">There was an error pasting your text:</system:String>
+    <system:String x:Key="item217">ЗАПУЩЕНО</system:String>
+    <system:String x:Key="item218">Режим разработчика</system:String>
+    <system:String x:Key="item219">Enabling developer mode means that the game will not be automatically patched and multiple instances of the game can be launched.</system:String>
+    <system:String x:Key="item220">При вставке текста произошла ошибка:</system:String>
 </ResourceDictionary>
