--- a/H1EmuLauncher/SettingsPages/ReportBug.xaml
+++ b/H1EmuLauncher/SettingsPages/ReportBug.xaml
@@ -20,7 +20,7 @@
         </ResourceDictionary>
     </Page.Resources>
 
-    <Border Background="#1C1B22"
+    <Border Background="{DynamicResource DarkerColour}"
             UseLayoutRounding="True"
             CornerRadius="0,5,5,5">
 
@@ -61,7 +61,7 @@
                         VerticalAlignment="Center"
                         HorizontalAlignment="Right"
                         Content="{DynamicResource item205}"
-                        Style="{DynamicResource StandardButton}">
+                        Style="{DynamicResource PrimaryButton}">
 
                     <Button.Effect>
 
@@ -79,7 +79,7 @@
             <Rectangle Grid.Row="2"
                        Margin="20,0,20,0"
                        Height="1"
-                       Fill="#FF2A2A32">
+                       Fill="{DynamicResource LighterColour}">
 
                 <Rectangle.Effect>
                     <DropShadowEffect BlurRadius="8"
@@ -112,7 +112,7 @@
                         VerticalAlignment="Center"
                         HorizontalAlignment="Right"
                         Content="{DynamicResource item205}"
-                        Style="{DynamicResource StandardButton}">
+                        Style="{DynamicResource PrimaryButton}">
 
                     <Button.Effect>
 
