--- a/H1EmuLauncher/Windows/AddServerWindow.xaml
+++ b/H1EmuLauncher/Windows/AddServerWindow.xaml
@@ -36,7 +36,7 @@
     </Window.Resources>
 
     <!-- Window grid -->
-    <Grid Background="#FF2A2A32">
+    <Grid Background="{DynamicResource LighterColour}">
 
         <Grid>
             <Grid.RowDefinitions>
@@ -100,7 +100,7 @@
 
             <!-- Main content in darkened area -->
             <Border Grid.Row="1"
-                    Background="#1C1B22"
+                    Background="{DynamicResource DarkerColour}"
                     Margin="15,0,15,15"
                     UseLayoutRounding="True"
                     CornerRadius="5">
@@ -203,7 +203,7 @@
                         <Rectangle Grid.Row="3"
                                    Margin="20,0,20,0"
                                    Height="1"
-                                   Fill="#FF2A2A32">
+                                   Fill="{DynamicResource LighterColour}">
 
                             <Rectangle.Effect>
                                 <DropShadowEffect BlurRadius="8"
@@ -230,7 +230,7 @@
                                     VerticalAlignment="Center"
                                     HorizontalAlignment="Center"
                                     Content="{DynamicResource item18}"
-                                    Style="{DynamicResource StandardButton}">
+                                    Style="{DynamicResource PrimaryButton}">
 
                                 <Button.Effect>
 
@@ -251,7 +251,7 @@
                                     VerticalAlignment="Center"
                                     HorizontalAlignment="Center"
                                     Content="{DynamicResource item28}"
-                                    Style="{DynamicResource StandardButton}">
+                                    Style="{DynamicResource PrimaryButton}">
 
                                 <Button.Effect>
 
