--- a/H1EmuLauncher/Windows/DisclaimerWindow.xaml
+++ b/H1EmuLauncher/Windows/DisclaimerWindow.xaml
@@ -35,7 +35,7 @@
     </Window.Resources>
 
     <!-- Window grid -->
-    <Grid Background="#FF2A2A32">
+    <Grid Background="{DynamicResource LighterColour}">
         
         <Grid>
             <Grid.RowDefinitions>
@@ -103,7 +103,7 @@
 
             <!-- Main content in darkened area -->
             <Border Grid.Row="1"
-                    Background="#1C1B22"
+                    Background="{DynamicResource DarkerColour}"
                     Margin="20,0,20,20"
                     UseLayoutRounding="True"
                     CornerRadius="5">
@@ -307,7 +307,7 @@
                         <Rectangle Grid.Row="4"
                                    Margin="20,0,20,0"
                                    Height="1"
-                                   Fill="#FF2A2A32">
+                                   Fill="{DynamicResource LighterColour}">
 
                             <Rectangle.Effect>
                                 <DropShadowEffect BlurRadius="8"
@@ -348,7 +348,7 @@
                                     Padding="25,7,25,7"
                                     IsEnabled="False"
                                     Content="{DynamicResource item167}"
-                                    Style="{DynamicResource StandardButton}">
+                                    Style="{DynamicResource PrimaryButton}">
 
                                 <Button.Effect>
                                     <DropShadowEffect BlurRadius="15"
