--- a/H1EmuLauncher/Windows/InstallServerInline.xaml
+++ b/H1EmuLauncher/Windows/InstallServerInline.xaml
@@ -38,7 +38,7 @@
     </Window.Resources>
 
     <!-- Window grid -->
-    <Grid Background="#FF2A2A32">
+    <Grid Background="{DynamicResource LighterColour}">
 
         <Grid>
             <Grid.RowDefinitions>
@@ -103,7 +103,7 @@
             <!-- Main content in darkened area -->
             <Border Grid.Row="1"
                     Margin="15,0,15,15"
-                    Background="#1C1B22"
+                    Background="{DynamicResource DarkerColour}"
                     UseLayoutRounding="True"
                     CornerRadius="5">
 
@@ -149,7 +149,7 @@
                         <Rectangle Grid.Row="2"
                                    Margin="20,0,20,0"
                                    Height="1"
-                                   Fill="#FF2A2A32">
+                                   Fill="{DynamicResource LighterColour}">
 
                             <Rectangle.Effect>
                                 <DropShadowEffect BlurRadius="8"
@@ -178,7 +178,7 @@
                                     VerticalAlignment="Center"
                                     HorizontalAlignment="Center"
                                     Content="{DynamicResource item43}"
-                                    Style="{DynamicResource StandardButton}">
+                                    Style="{DynamicResource PrimaryButton}">
 
                                 <Button.Effect>
 
@@ -200,7 +200,7 @@
                                     VerticalAlignment="Center"
                                     HorizontalAlignment="Center"
                                     Content="{DynamicResource item44}"
-                                    Style="{DynamicResource StandardButton}">
+                                    Style="{DynamicResource PrimaryButton}">
 
                                 <Button.Effect>
 
