--- a/H1EmuLauncher/Language/StringResources.fr-FR.xaml
+++ b/H1EmuLauncher/Language/StringResources.fr-FR.xaml
@@ -194,6 +194,6 @@
     <system:String x:Key="item216">Veuillez désinstaller tous les fichiers d'actifs personnalisés (.pack) lors de la lecture sur l'un des serveurs principaux, sinon cela pourrait entraîner une interdiction.</system:String>
     <system:String x:Key="item217">RUNNING</system:String>
     <system:String x:Key="item218">Developer mode</system:String>
-    <system:String x:Key="item219">Enabling developer mode means that the game will not be automatically patched.</system:String>
+    <system:String x:Key="item219">Enabling developer mode means that the game will not be automatically patched and multiple instances of the game can be launched.</system:String>
     <system:String x:Key="item220">There was an error pasting your text:</system:String>
 </ResourceDictionary>
