--- a/H1EmuLauncher/SettingsPages/AccountKey.xaml
+++ b/H1EmuLauncher/SettingsPages/AccountKey.xaml
@@ -21,7 +21,7 @@
         </ResourceDictionary>
     </Page.Resources>
 
-    <Border Background="#1C1B22"
+    <Border Background="{DynamicResource DarkerColour}"
             UseLayoutRounding="True"
             CornerRadius="0,5,5,5">
 
@@ -85,7 +85,7 @@
             <Rectangle Grid.Row="3"
                        Margin="20,0,20,0"
                        Height="1"
-                       Fill="#FF2A2A32">
+                       Fill="{DynamicResource LighterColour}">
 
                 <Rectangle.Effect>
                     <DropShadowEffect BlurRadius="8"
@@ -213,7 +213,7 @@
                     HorizontalAlignment="Center"
                     Content="GENERATE"
                     Visibility="Collapsed"
-                    Style="{DynamicResource StandardButton}">
+                    Style="{DynamicResource PrimaryButton}">
 
                 <Button.Effect>
 
