--- a/H1EmuLauncher/SettingsPages/Options.xaml
+++ b/H1EmuLauncher/SettingsPages/Options.xaml
@@ -21,7 +21,7 @@
         </ResourceDictionary>
     </Page.Resources>
 
-    <Border Background="#1C1B22"
+    <Border Background="{DynamicResource DarkerColour}"
             UseLayoutRounding="True"
             CornerRadius="0,5,5,5">
 
@@ -113,7 +113,7 @@
             <Rectangle Grid.Row="2"
                        Margin="20,0,20,0"
                        Height="1"
-                       Fill="#FF2A2A32">
+                       Fill="{DynamicResource LighterColour}">
 
                 <Rectangle.Effect>
                     <DropShadowEffect BlurRadius="8"
@@ -162,7 +162,7 @@
             <Rectangle Grid.Row="4"
                        Margin="20,0,20,0"
                        Height="1"
-                       Fill="#FF2A2A32">
+                       Fill="{DynamicResource LighterColour}">
 
                 <Rectangle.Effect>
                     <DropShadowEffect BlurRadius="8"
@@ -211,7 +211,7 @@
             <Rectangle Grid.Row="6"
                        Margin="20,0,20,0"
                        Height="1"
-                       Fill="#FF2A2A32">
+                       Fill="{DynamicResource LighterColour}">
 
                 <Rectangle.Effect>
                     <DropShadowEffect BlurRadius="8"
@@ -240,7 +240,7 @@
                     <Grid>
                         <Ellipse Width="18"
                                  Height="18"
-                                 Fill="#FF2A2A32"
+                                 Fill="{DynamicResource LighterColour}"
                                  ToolTipService.InitialShowDelay="0">
 
                             <Ellipse.ToolTip>
@@ -328,7 +328,7 @@
             <Rectangle Grid.Row="8"
                        Margin="20,0,20,0"
                        Height="1"
-                       Fill="#FF2A2A32">
+                       Fill="{DynamicResource LighterColour}">
 
                 <Rectangle.Effect>
                     <DropShadowEffect BlurRadius="8"
