--- a/H1EmuLauncher/Windows/MessageBoxWindow.xaml
+++ b/H1EmuLauncher/Windows/MessageBoxWindow.xaml
@@ -38,7 +38,7 @@
     </Window.Resources>
 
     <!-- Window grid -->
-    <Grid Background="#FF2A2A32">
+    <Grid Background="{DynamicResource LighterColour}">
         
         <Grid>
             <Grid.RowDefinitions>
@@ -103,7 +103,7 @@
             <!-- Main content in darkened area -->
             <Border Grid.Row="1"
                     Margin="15,0,15,15"
-                    Background="#1C1B22"
+                    Background="{DynamicResource DarkerColour}"
                     UseLayoutRounding="True"
                     CornerRadius="5">
 
@@ -180,7 +180,7 @@
                         <Rectangle Grid.Row="3"
                                    Margin="20,0,20,0"
                                    Height="1"
-                                   Fill="#FF2A2A32">
+                                   Fill="{DynamicResource LighterColour}">
 
                             <Rectangle.Effect>
                                 <DropShadowEffect BlurRadius="8"
@@ -211,7 +211,7 @@
                                     HorizontalAlignment="Center"
                                     Visibility="Collapsed"
                                     Content="{DynamicResource item189}"
-                                    Style="{DynamicResource StandardButton}">
+                                    Style="{DynamicResource PrimaryButton}">
 
                                 <Button.Effect>
 
@@ -234,7 +234,7 @@
                                     HorizontalAlignment="Center"
                                     Visibility="Collapsed"
                                     Content="{DynamicResource item133}"
-                                    Style="{DynamicResource StandardButton}">
+                                    Style="{DynamicResource PrimaryButton}">
 
                                 <Button.Effect>
                                     
@@ -257,7 +257,7 @@
                                     HorizontalAlignment="Center"
                                     Visibility="Collapsed"
                                     Content="{DynamicResource item134}"
-                                    Style="{DynamicResource StandardButton}">
+                                    Style="{DynamicResource PrimaryButton}">
 
                                 <Button.Effect>
 
@@ -279,7 +279,7 @@
                                     VerticalAlignment="Center"
                                     HorizontalAlignment="Center"
                                     Content="{DynamicResource item92}"
-                                    Style="{DynamicResource StandardButton}">
+                                    Style="{DynamicResource PrimaryButton}">
 
                                 <Button.Effect>
 
