--- a/H1EmuLauncher/App.xaml
+++ b/H1EmuLauncher/App.xaml
@@ -33,19 +33,24 @@
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type ToolTip}">
-                            <Border Background="{DynamicResource DarkerColour}"
-                                    BorderBrush="{DynamicResource LighterColour}"
-                                    BorderThickness="1"
-                                    CornerRadius="5"
-                                    Padding="10,5,10,5"
-                                    MaxWidth="500">
+                            <Border Background="{DynamicResource DarkerColour}">
+                                <Border BorderBrush="{DynamicResource LighterColour}"
+                                        BorderThickness="1"
+                                        CornerRadius="5"
+                                        Padding="10,5,10,5"
+                                        MaxWidth="500">
 
-                                <TextBlock Text="{TemplateBinding Content}"
-                                           Foreground="FloralWhite"
-                                           FontSize="16"
-                                           FontFamily="Bahnschrift Light"
-                                           TextWrapping="Wrap"
-                                           Style="{DynamicResource TextBlockStyle}"/>
+                                    <TextBlock Text="{TemplateBinding Content}"
+                                               Foreground="FloralWhite"
+                                               FontSize="16"
+                                               FontFamily="Bahnschrift Light"
+                                               TextWrapping="Wrap"
+                                               Style="{DynamicResource TextBlockStyle}"/>
+
+                                    <Border.Background>
+                                        <ImageBrush ImageSource="Resources\Grain.png" Opacity="0.5" TileMode="Tile" ViewportUnits="Absolute" Viewport="0,0,512,512"/>
+                                    </Border.Background>
+                                </Border>
                             </Border>
                         </ControlTemplate>
                     </Setter.Value>
